# circuitpython-hooks

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  README.rst  pyproject.toml  requirements-dev.txt  requirements.txt
circuitpython_hooks/: hook_settings.toml
