# SPDX-FileCopyrightText: 2024 Alec Delaney, for Adafruit Industries
# SPDX-License-Identifier: MIT

[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools-scm",
]

[project]
name = "circuitpython-hooks"
description = "Pre-commit hooks used as CircuitPython development code checks"
readme = "README.rst"
authors = [
    {name = "Adafruit Industries", email = "circuitpython@adafruit.com"}
]
keywords = [
    "adafruit",
    "circuitpython",
    "micropython",
    "pre-commit",
    "hooks",
]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Hardware",
    "Topic :: Software Development :: Testing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Environment :: Console",
]
dynamic = ["version", "dependencies", "optional-dependencies"]

[project.urls]
Homepage = "https://github.com/adafruit/circuitpython-hooks"
Repository = "https://github.com/adafruit/circuitpython-hooks.git"
Issues = "https://github.com/adafruit/circuitpython-hooks/issues"


[tool.setuptools]
# TODO: IF LIBRARY FILES ARE A PACKAGE FOLDER,
#       CHANGE `py_modules = ['...']` TO `packages = ['...']`
packages = ["circuitpython_hooks"]
include-package-data = true

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {dev = {file = ["requirements-dev.txt"]}}

[tool.setuptools.dynamic.version]
file = "VERSION"

[tool.ruff.lint]
select = ["D", "PL", "UP", "I"]
ignore = ["D213", "D203"]
